--- a/EmbeddedAgent/EmbeddedAgent.csproj
+++ b/EmbeddedAgent/EmbeddedAgent.csproj
@@ -8,6 +8,34 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	  <RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	  <ApplicationManifest>$(MSBuildThisFileDirectory)app.manifest</ApplicationManifest>
+	  <ApplicationIcon>Mcdo-Design-Cats-Installer.ico</ApplicationIcon>
   </PropertyGroup>
+	
+
+  <ItemGroup>
+    <Content Include="Mcdo-Design-Cats-Installer.ico" />
+  </ItemGroup>
+	
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+	
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+	
+
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
 
 </Project>
